# [alias]
# b = "build"
# c = "check"
# t = "test"
# r = "run"

# [build]
# target = "wasm32-unknown-unknown"

[workspace]
members = [
    "token",
    "registry",
    "tokenizer"
]

[profile.release]
codegen-units = 1
opt-level = "s" # Tell `rustc` to optimize for small code size.
lto = true
debug = false
panic = "abort"
overflow-checks = true